fix: Wrong color on black theme while editing #126

--- a/frontend/static/css/dark_theme.css
+++ b/frontend/static/css/dark_theme.css
@@ -298,3 +298,19 @@ hr {
     color: var(--dr-cl);
     border-color: var(--dr-sl);
 }
+
+.editor-preview-active, .editor-preview-active-side {
+    background-color: var(--dr-bg) !important;    
+}
+
+.editor-preview-side {
+    border: 1px solid var(--dr-sl) !important;
+}
+
+.editor-toolbar a { 
+    background: var(--dr-bg) !important; 
+}
+
+.editor-toolbar a.active {
+    border-color: var(--dr-sl) !important;
+}
